testdata/baselines/reference/submodule/conformance/cjsErrors(module=node20).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
index.ts(1,22): error TS2876: This relative import path is unsafe to rewrite because it looks like a file name, but actually resolves to "./foo.ts/index.ts".


!!! error TS5109: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node20'.
==== index.ts (1 errors) ====
    import foo = require("./foo.ts"); // Error
                         ~~~~~~~~~~
!!! error TS2876: This relative import path is unsafe to rewrite because it looks like a file name, but actually resolves to "./foo.ts/index.ts".
    import type _foo = require("./foo.ts"); // Ok
    
==== foo.ts/index.ts (0 errors) ====
    export = {};
    